# ir_ke_ko_abstraction

./: .gitignore  CMakeLists.txt  README.md
src/: .main.cpp.swp  main.cpp
src/1st_round/: main.cpp
src/2nd_round/: main.cpp  secondround.cpp  secondround.h
src/3rd_round/: main.cpp  thirdround.cpp  thirdround.h
src/4th_round/: clustermap.h  fourthround.cpp  fourthround.h  handtype.h  main.cpp
tests/: FourthRoundTests.cpp  IntegrationTests.cpp  SecondRoundTests.cpp  ThirdRoundTests.cpp
